--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-*.cbp
-*.depend
-*.layout
-*.gitattributes
-*.gitignore
-
 # Prerequisites
 *.d
 
@@ -56,3 +50,9 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+*.cbp
+*.depend
+*.layout
+.gitattributes
+.gitignore
